[package]
name = "background"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
log = "0.4.14"
rmp = "0.8.10"
rmp-serde = "0.15.4"
simple-logging = "2.0.2"
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
