[package]
name = "bridge"
version = "0.1.0"
edition = "2018"
description = "This will stand on lua's side and interact with `core`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "0.6.2", features = ["module", "async", "send"] }
tokio = { version = "1.9.0", features = ["rt-multi-thread", "time"] }
