[package]
name = "bridge"
version = "0.1.0"
edition = "2018"
description = "This will stand on lua's side and interact with `core`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
mlua = { version = "0.6.2", features = ["module", "async", "send"] }
serde = "1.0.127"
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "time", "sync"] }
linearf = { path = "../core" }
