[package]
name = "linearfinder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
log = "0.4.14"
rmp = "0.8.10"
rmp-serde = "0.15.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simple-logging = "2.0.2"
structopt = "0.3.21"
tokio = { version = "1.6.0", features = ["full"] }
