[package]
name = "linearf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
log = "0.4.14"
rmp = "0.8.10"
rmp-serde = "0.15.5"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
simple-logging = "2.0.2"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["full"] }
