[package]
name = "linearf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
log = "0.4.14"
rmp = "0.8.10"
rmp-serde = "0.15.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
simple-logging = "2.0.2"
structopt = "0.3.23"
tokio = { version = "1.11.0", features = ["full"] }
