[package]
name = "bench_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.17"
log = "0.4.14"
pin-project-lite = "0.2.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
smartstring = { version = "0.2.9", features = ["serde"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "sync", "macros"] }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "cache"
harness = false
