[package]
name = "linearf_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
serde = "1.0.130"
#mlua = { version = "0.6.5", features = ["module", "async", "send", "serialize"] }
tokio = { version = "1.12.0", features = ["rt-multi-thread", "sync"] }
linearf = { path = "../core" }
registry = { path = "../registry" }
os_str_bytes = "4.2.0"
serde_json = "1.0.68"
mlua = { path = "/home/octaltree/storage/repos/others/mlua", features = ["module", "async", "send", "serialize", "unload"] }
