[package]
name = "linearf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
smartstring = { version = "0.2.9", features = ["serde"] }
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1.7"
