[package]
name = "registry"
version = "0.1.0"
edition = "2021"
[dependencies.linearf]
path = "../core"

[dependencies.log]
version = "*"

[dependencies.rayon]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.test_sources]
path = "/home/octaltree/workspace/lnf/model/test_sources"
